2001-01-21  Phil Edwards  <pme@sources.redhat.com>

	* docs/html/configopts.html:  Update for current status.  Fix HTML.
	* docs/html/install.html:  Update for current status.

2001-01-20  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* testsuite/libstdc++.tests/tests.exp: New file.
	* testsuite/lib/libstdc++.exp: Itou.
	* testsuite/README: Itou.

2001-01-20  Gabriel Dos Reis  <gdr@codesourcery.com>

	* tests_flags.in: Just output the bare minimum to run tests.
	Let's the caller do its own arrangement.

	* mkcheck.in: Rename INC_PATH to INCLUDES.  Adjust flags
	computations.

2001-01-19  Gabriel Dos Reis  <gdr@codesourcery.com>

	* testsuite/17_intro: Prepare testcases for new style DejaGnu
	framework. 

2001-01-18  Gabriel Dos Reis  <gdr@codesourcery.com>

	* testsuite/libstdc++.tests, testsuite/lib: New directories.

2001-01-17  Loren J. Rittle  <ljrittle@acm.org>

        * mkcheck.in: Construct file names that match $objdir structure.
        * testsuite/27_io/filebuf_members-1.txt: New file.
        * testsuite/27_io/ifstream_members-1.txt: New file.
        * testsuite/27_io/ostream_inserter_char-1.txt: New file.

	* testsuite/27_io/ios_base_members_static.cc (test02): Add test.
	* testsuite/27_io/ios_base_members_static-1.tst: Add expected output.

2001-01-17  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

	* testsuite/27_io/istream_sentry.cc (test02): Fix.

2001-01-17  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/1605
	* include/bits/ios_base.h (ios_base::failure): Tighten up throw specs.
	* src/ios.cc (ios_base::failure): Make definitions match.
        * libsupc++/typeinfo (class bad_typeid): Add throw specs.
        (class bad_cast): Same.
        * libsupc++/exception (class exception): Add throw specs.
        * libsupc++/exception_support.cc (set_terminate): Add throw specs.
        (set_unexpected): Same.
        (uncaught_exception): Same.
        (what): Same.

	* docs/html/17_intro/C++STYLE (classname): Fix.
	